Changes in validations middlewares. Fixing typos in swagger documentation
